git force push alias: fp
this includes --force-with-lease to only force push
if the remote was not changed by someone else

--- a/.gitconfig
+++ b/.gitconfig
@@ -43,6 +43,8 @@
   ffum = ! bash -c 'git coh && git ffub'
   # force ffum to master branch
   ffumaster = ! bash -c 'git checkout master && git ffub'
+  pushf = fp
+  fp = push --force-with-lease
   rsu = ! git reset --hard upstream/`git rev-parse --abbrev-ref HEAD`
 
 [branch]
