--- a/.gitconfig
+++ b/.gitconfig
@@ -71,6 +71,7 @@
   frag = magenta bold
   old = red bold
   new = green bold
+  whitespace = red reverse
 [color "status"]
   added = green
   changed = cyan
